--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "bpmn-js": "^9.3.2",
-    "bpmn-js-properties-panel": "^1.4.0",
+    "bpmn-js": "7.4.1",
+    "bpmn-js-embedded-comments": "0.6.1",
+    "bpmn-js-properties-panel": "0.37.5",
     "dmn-js": "^12.2.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
