--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "x2js": "^3.4.3",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "bootstrap": "^4.6.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.6",
