--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "bpmn-js": "7.4.1",
     "bpmn-js-embedded-comments": "0.6.1",
     "bpmn-js-properties-panel": "0.37.5",
-    "dmn-js": "^12.2.1",
+    "camunda-dmn-moddle": "1.1.0",
+    "dmn-js": "10.1.0",
+    "dmn-js-properties-panel": "0.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "x2js": "^3.4.3",
