--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,15 @@
             "styles": [
               "src/styles.scss",
 
-              "node_modules/bpmn-js-properties-panel/styles/properties.less"
+              "node_modules/bpmn-js-properties-panel/styles/properties.less",
+              "node_modules/dmn-js-properties-panel/dist/assets/dmn-js-properties-panel.css",
+              "node_modules/dmn-js/dist/assets/diagram-js.css",
+              "node_modules/dmn-js/dist/assets/dmn-js-decision-table.css",
+              "node_modules/dmn-js/dist/assets/dmn-js-decision-table-controls.css",
+              "node_modules/dmn-js/dist/assets/dmn-js-drd.css",
+              "node_modules/dmn-js/dist/assets/dmn-js-literal-expression.css",
+              "node_modules/dmn-js/dist/assets/dmn-js-shared.css",
+              "node_modules/dmn-js/dist/assets/dmn-font/css/dmn-embedded.css"
             ],
             "scripts": []
           },
